--- a/src/Components/EnergyCalculator/Footer/Footer.css
+++ b/src/Components/EnergyCalculator/Footer/Footer.css
@@ -76,6 +76,7 @@
   .cesn-footer-links {
     order: -2;
     align-items: flex-start;
+    margin-top: 0.5rem;
   }
 
   .cesn-footer-links .policy-link {
@@ -87,10 +88,6 @@
     order: -1;
     margin-top: 1.25rem;
     align-self: flex-start;
-  }
-
-  .cesn-footer-links {
-    margin-top: 0.5rem;
   }
 
   .cesn-footer-copyright {
